# CnnByCpp

./: .gitignore  CMakeLists.txt  Makefile  readme.md
demo/: demo  demo.cpp
include/: Cnn_utils.hpp  Model.hpp  Train.hpp  gui.hpp  layer.hpp  load.hpp  log.hpp  main.hpp  metrics.hpp  optimizer.hpp  predict.hpp  tensor.hpp
logs/: NoBn_training_log.csv  old_training_log.csv  old_training_log_2.csv  training_log.csv
src/: Cnn_utils.cpp  Model.cpp  Oldmain.cpp  Train.cpp  gui.cpp  layer.cpp  load.cpp  log.cpp  main.cpp  metrics.cpp  optimizer.cpp  predict.cpp  tensor.cpp  tensor_cuda.cu
